20/05/2004  Tests, examples, documentation added in directory atomic_doc

19/05/2004  Atomic number can be replaced by atom name in input, as in
            the other version of the code (PG)

14/05/2004  Atomic code added to the main CVS tree in directory atomic/
            Installation follows the same logic of all other codes.
            Routines: sph_bes erf random bachel funct which_dft capital 
            matches functionals lsda_functionals, merged with or replaced
            by corresponding routines in flib/, Modules/, PW/  (PG)

----------------------------------------------------------------------
13/04/2004  Write_upf now write the correct core charge. Small bug fix
            and other small improvements. Added an example for the generation
            of a spin-orbit US pseudopotential. (ADC)

05/04/2004  Bug fix. s local potential was not calculated correctly in
            relativistic case. (ADC)

01/04/2004  A US spin-orbit splitted pseudopotential reproduces the
            all-electron eigenvalues  (ADC)

26/03/2004  Relativistic exchange introduced among the functionals (AMC)

07/03/2004  Initial work for rationalize the output files (ADC)

27/02/2004  Extra flag file_recon in test namelist to produce the appropriate
            file for paw reconstruction (MP)

25/02/2004  Small changes to makefile. Now the code compiles on sp4, pc_pgi
            and pc_ifc. (ADC)

24/02/2004  Initial release. (ADC)
            Simplified installation. Now test.job does not require the path.